--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
         <div class="section section-services student-index">
           <div class="section-title">
-            <span>Flatiron School Class 003</span>
+            <span>Flatiron School Class 2019</span>
           </div>
         </div>
 
@@ -123,7 +123,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/tiffany_carter.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/tiffany_carter_index.jpg" class="attachment-blog-thumb wp-post-image" alt="Tiffany_Carter">
+                    <img width="304" height="304" class="prof-image" src="img/students/Tiffany_Carter_index.jpg" class="attachment-blog-thumb wp-post-image" alt="Tiffany_Carter">
                   </a>
                 </div>
 
@@ -138,7 +138,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I'm really excited to begin this journey with everyone, to learn more, and finally switch careers!</p>
                 </div>
                 <div class="clear"></div>
               </li>
